fixed FTS text alignment in IE
git-svn-id: svn+ssh://svn.lablz.com/hosts/trunk/hosts@11650 483a4429-297d-4d5f-a489-5c5d2c303994

--- a/styles/common-template.css
+++ b/styles/common-template.css
@@ -499,7 +499,7 @@ tr.fts td { vertical-align: middle; padding: 2px; }
     padding: 0px 0px 0px 0px;
     margin: 0px;
 
-    line-height: 31px;
+    line-height: 21px; 
     vertical-align: middle;   
  }
 .desktop_search .right {
